Fri Jun 18 19:26:58 CEST 2004  Pekka Riikonen <priikone@silcnet.org>

	* Check for valid route when receiving packet from router and
	  when routing it to local server in the cell.  A patch from
	  Matt Miller.  Affected files silcd/router.c and server.c.

Sat May  1 13:55:54 CEST 2004  Patrik Weiskircher <pat@icore.at>

	* Couldn't detach and reattach twice, because of the previous
	  commit. Affected file silcd/packet_receive.c

Fri Apr 30 19:40:28 CEST 2004  Patrik Weiskircher <pat@icore.at>

	* Added check to ignore Port value if Initiator is FALSE. 
	  Remote router coudln't connect if Port was set. Affected file
	  silcd/serverconfig.c

	* If some client tries to resume more than once at the same time,
	  server crashed. Router didn't crash, but showed odd behaviour
	  (didn't allow clients to join anymore, ..). Affected files
	  silcd/packet_receive.c silcd/idlist.h

Mon Mar 15 21:10:08 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Destroy the file transfer session in silc_client_file_close
	  with timeout.  Affected file lib/silcclient/client_ftp.c.

	* Call SFTP server monitor in READ and WRITE after the actual
	  operations.  Affected file lib/silcsftp/sftp_server.c.

Wed Mar 10 21:30:02 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Create one configure script from configure fragments
	  (configure.ad).  This is a first step towards new distribution
	  system.  Affected files prepare, configure.in.pre,
	  lib/silcmath/mpi/configure.ad.

Wed Mar 10 18:35:24 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Removed expiring of client key pair.  Affected file is
	  irssi/src/silc/core/clientutil.c

Tue Mar  9 17:11:58 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Check the number of connections from real number of
	  connections instead of socket number, when deciding if
	  server is full.  Affected files are silcd/server.c,
	  server_internal.h and silcd.c.

	* Clarified the connections_max meaning in General section