@@ -1,3 +1,10 @@
+Wed Sep 22 19:46:32 CEST 2004  Patrik Weiskircher <pat@icore.at>
+
+  * When using silc_net_create_connection[_async], and your system can
+    create IPv6 sockets, it will try to connect to the IPv6 host. Now it
+    tries to connect to an IPv4 host if IPv6 fails. Affected file
+    lib/silcutil/unix/silcunixnet.c
+
 Fri Jun 18 19:26:58 CEST 2004  Pekka Riikonen <priikone@silcnet.org>
 
 	* Check for valid route when receiving packet from router and
